Fix accidental flip to landscape when keyboard is invoked on iOS

--- a/public_src/css/style.scss
+++ b/public_src/css/style.scss
@@ -1,6 +1,6 @@
 @import '_flex';
 @mixin landscape {
-  @media (orientation: landscape) {
+  @media (min-width: 550px) {
     @content;
   }
 }
